Make responsive with new design and styling

--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
                   Hello! I'm Stephanie, a hopeful Junior Software
                   Developer from Leeds.<br />
                   I've gone from History grad to coding bootcamp grad,
-                  which seems like a big change, but they're not too
+                  which seems like a big change, but they're not so
                   different - as a logical thinker who appreciates the
                   smaller details as well as the bigger picture, the
                   transition came naturally to me. I love the process
@@ -328,150 +328,148 @@
             <section>
               <div id="projects-box" class="box">
                 <h2 aria-label="Projects">Projects</h2>
-                <div class="container">
-                  <div class="card shadow-card">
-                    <h3>Budding</h3>
-                    <ul class="project-tech">
-                      <li>JavaScript,</li>
-                      <li>React Native,</li>
-                      <li>Expo,</li>
-                      <li>PostgreSQL,</li>
-                      <li>AWS S3,</li>
-                      <li>Express.js,</li>
-                      <li>CSS,</li>
-                      <li>Node.js</li>
-                    </ul>
-                    <p>
-                      Budding is an app for measuring and tracking the
-                      progress of plants using a photograph and the
-                      pot height measurement, made in two weeks as the
-                      final group project for the Northcoders coding
-                      bootcamp course.
-                    </p>
-                    <button
-                      id="budding"
-                      aria-expanded="false"
-                      class="show-more-button"
-                    >
-                      Show more
-                    </button>
 
-                    <div class="hidden-info">
-                      <div id="budding-more-info">
-                        <p>
-                          The user places markers on the photo at the
-                          bottom of the pot, the top of the pot, and
-                          the top of the plant.<br />
-                          <br />
-                          The app uses the position of these markers
-                          to calculate the distance between the bottom
-                          and top of the pot in pixels, and create a
-                          pixel-to-cm scale using the real-life pot
-                          height.
-                          <br />
-                          <br />
-                          It then uses this scale to calculate the
-                          real-life height of the plant. Each time a
-                          user measures their plant, it is saved as a
-                          snapshot and can be viewed on the plant's
-                          page. Measurements are displayed on a chart,
-                          enabling the tracking of plant growth over
-                          time.
-                        </p>
+                <div>
+                  <h3>Budding</h3>
+                  <ul class="project-tech">
+                    <li>JavaScript,</li>
+                    <li>React Native,</li>
+                    <li>Expo,</li>
+                    <li>PostgreSQL,</li>
+                    <li>AWS S3,</li>
+                    <li>Express.js,</li>
+                    <li>CSS,</li>
+                    <li>Node.js</li>
+                  </ul>
+                  <p>
+                    Budding is an app for measuring and tracking the
+                    progress of plants using a photograph and the pot
+                    height measurement, made in two weeks as the final
+                    group project for the Northcoders coding bootcamp
+                    course.
+                  </p>
+                  <button
+                    id="budding"
+                    aria-expanded="false"
+                    class="show-more-button"
+                  >
+                    Show more
+                  </button>
 
-                        <img
-                          src="./assets/project-demos/budding-muted.gif"
-                          alt="gif showing a demonstration of the Budding app"
-                          class="mobile-gif"
-                        />
-                      </div>
-                      <div class="project-links">
-                        <a href="#" target="_blank">Live app</a>
-                        <a
-                          href="https://github.com/thorners55/budding-back-end"
-                          target="_blank"
-                          >Back-end code</a
-                        >
-                        <a
-                          href="https://github.com/thorners55/budding-front-end"
-                          target="_blank"
-                          >Front-end code</a
-                        >
-                        <a
-                          href="https://www.youtube.com/watch?v=llKXad2gF8c&t=242s"
-                          target="_blank"
-                          >Demo</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="card shadow-card">
-                    <h3>Northcoders News</h3>
-                    <ul class="project-tech">
-                      <li>JavaScript,</li>
-                      <li>React,</li>
-                      <li>PostgreSQL,</li>
-                      <li>Axios,</li>
-                      <li>Jest,</li>
-                      <li>CSS,</li>
-                      <li>Node.js</li>
-                    </ul>
-                    <p>
-                      A Reddit-style discussion website with articles
-                      and comments. Users can choose a login, view
-                      user profiles, up vote or down vote, browse by
-                      topic, and sort by date, popularity, or number
-                      of comments.
-                    </p>
-                    <button
-                      id="nc-news"
-                      aria-expanded="false"
-                      class="show-more-button"
-                    >
-                      Show more
-                    </button>
-                    <div class="hidden-info">
+                  <div class="hidden-info">
+                    <div id="budding-more-info">
                       <p>
-                        Made as coursework for the Northcoders
-                        bootcamp, Northcoders News is responsive and
-                        accessible. The site is written in semantic
-                        HTML with ARIA labels, and designed with
-                        suitable colour contrasts and focus
-                        indication.
-                      </p>
-                      <p>
-                        The site is served by a purpose-built, RESTful
-                        API, and hosted with Heroku. The API has been
-                        fully tested with TDD using Jest, with
-                        appropriate error handling messages when
-                        incorrect paths are followed.
+                        The user places markers on the photo at the
+                        bottom of the pot, the top of the pot, and the
+                        top of the plant.<br />
+                        <br />
+                        The app uses the position of these markers to
+                        calculate the distance between the bottom and
+                        top of the pot in pixels, and create a
+                        pixel-to-cm scale using the real-life pot
+                        height.
+                        <br />
+                        <br />
+                        It then uses this scale to calculate the
+                        real-life height of the plant. Each time a
+                        user measures their plant, it is saved as a
+                        snapshot and can be viewed on the plant's
+                        page. Measurements are displayed on a chart,
+                        enabling the tracking of plant growth over
+                        time.
                       </p>
 
                       <img
-                        src="./assets/project-demos/Northcoders-News.gif"
-                        alt="gif showing a demonstration of my Northcoders News site"
-                        class="desktop-gif"
+                        src="./assets/project-demos/budding-muted.gif"
+                        alt="gif showing a demonstration of the Budding app"
+                        class="mobile-gif"
                       />
+                    </div>
+                    <div class="project-links">
+                      <a href="#" target="_blank">Live app</a>
+                      <a
+                        href="https://github.com/thorners55/budding-back-end"
+                        target="_blank"
+                        >Back-end code</a
+                      >
+                      <a
+                        href="https://github.com/thorners55/budding-front-end"
+                        target="_blank"
+                        >Front-end code</a
+                      >
+                      <a
+                        href="https://www.youtube.com/watch?v=llKXad2gF8c&t=242s"
+                        target="_blank"
+                        >Demo</a
+                      >
+                    </div>
+                  </div>
+                </div>
 
-                      <div class="project-links">
-                        <a
-                          href="https://stephanies-nc-news.netlify.app/"
-                          target="_blank"
-                          >Live site</a
-                        >
-                        <a
-                          href="https://stephanies-news.herokuapp.com/api/"
-                          target="_blank"
-                          >Live API</a
-                        >
-                        <a
-                          href="https://github.com/thorners55/stephanies-nc-news"
-                          target="_blank"
-                          >Front-end code</a
-                        >
-                        <a href="#" target="_blank">Back-end code</a>
-                      </div>
+                <div class="project">
+                  <h3>Northcoders News</h3>
+                  <ul class="project-tech">
+                    <li>JavaScript,</li>
+                    <li>React,</li>
+                    <li>PostgreSQL,</li>
+                    <li>Axios,</li>
+                    <li>Jest,</li>
+                    <li>CSS,</li>
+                    <li>Node.js</li>
+                  </ul>
+                  <p>
+                    A Reddit-style discussion website with articles
+                    and comments. Users can choose a login, view user
+                    profiles, up vote or down vote, browse by topic,
+                    and sort by date, popularity, or number of
+                    comments.
+                  </p>
+                  <button
+                    id="nc-news"
+                    aria-expanded="false"
+                    class="show-more-button"
+                  >
+                    Show more
+                  </button>
+                  <div class="hidden-info">
+                    <p>
+                      Made as coursework for the Northcoders bootcamp,
+                      Northcoders News is responsive and accessible.
+                      The site is written in semantic HTML with ARIA
+                      labels, and designed with suitable colour
+                      contrasts and focus indication.
+                    </p>
+                    <p>
+                      The site is served by a purpose-built, RESTful
+                      API, and hosted with Heroku. The API has been
+                      fully tested with TDD using Jest, with
+                      appropriate error handling messages when
+                      incorrect paths are followed.
+                    </p>
+
+                    <img
+                      src="./assets/project-demos/Northcoders-News.gif"
+                      alt="gif showing a demonstration of my Northcoders News site"
+                      class="desktop-gif"
+                    />
+
+                    <div class="project-links">
+                      <a
+                        href="https://stephanies-nc-news.netlify.app/"
+                        target="_blank"
+                        >Live site</a
+                      >
+                      <a
+                        href="https://stephanies-news.herokuapp.com/api/"
+                        target="_blank"
+                        >Live API</a
+                      >
+                      <a
+                        href="https://github.com/thorners55/stephanies-nc-news"
+                        target="_blank"
+                        >Front-end code</a
+                      >
+                      <a href="#" target="_blank">Back-end code</a>
                     </div>
                   </div>
                 </div>
@@ -562,7 +560,6 @@
                   aria-label="contact form"
                   method="POST"
                   data-netlify="true"
-                  class="shadow-card"
                 >
                   <label id="name-label"
                     >Name:
