--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                 >Skills and Experience</a
               >
               <a href="#projects" class="nav-projects">Projects</a>
-              <a href="#blog" class="nav-blog">Blog</a>
+              <!-- <a href="#blog" class="nav-blog">Blog</a> -->
               <a href="#contact" class="nav-contact">Contact</a>
             </nav>
           </div>
@@ -477,6 +477,7 @@
             </section>
           </div>
 
+          <!-- 
           <div id="blog" class="section blog">
             <section>
               <div id="blog-box" class="box">
@@ -484,6 +485,7 @@
               </div>
             </section>
           </div>
+          -->
 
           <div id="contact" class="section contact">
             <section>
