Remove unused classes

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,6 @@
                   alt="GitHub logo"
                 >
                   <path
-                    class="cls-1"
                     d="M61.57,84.19c0-2.33,0-4.66,0-7a10.27,10.27,0,0,0-1.86-5.6c-1.12-1.63-1.11-1.58.94-1.92a38.9,38.9,0,0,0,6.63-1.55c7.79-2.74,11.8-8.42,12.92-16.4a25.76,25.76,0,0,0-.1-9.1,15.87,15.87,0,0,0-3.35-7.16A3,3,0,0,1,76,32.31c1-3.13.44-6.24-.39-9.33-.39-1.43-1.19-1.74-2.61-1.5a27.06,27.06,0,0,0-9.58,4.07,3.6,3.6,0,0,1-3,.53,45.36,45.36,0,0,0-20.76,0,4.25,4.25,0,0,1-3.59-.63,25.1,25.1,0,0,0-9.61-4,1.72,1.72,0,0,0-2.25,1.33,17.81,17.81,0,0,0-.41,9.84,2.25,2.25,0,0,1-.31,2.31c-4.19,4.79-4.61,10.51-3.93,16.45.6,5.24,2.46,9.9,6.65,13.35,3.63,3,8,4.25,12.52,5,.38.06.77.08,1.16.14,1,.16,1.37.53.53,1.45a8,8,0,0,0-1.92,4,2.36,2.36,0,0,1-1.91,2c-5.39,1.51-9.27.6-12.39-4-1.41-2.06-2.93-3.91-5.33-4.83A8.77,8.77,0,0,0,16.86,68c-.7-.09-1.58-.22-1.92.6s.51,1.27,1.08,1.63c2.89,1.76,4.51,4.49,5.86,7.46a10.77,10.77,0,0,0,9,6.46A19.22,19.22,0,0,0,36.51,84c1.28-.21,1.68.24,1.63,1.49-.07,1.94,0,3.89,0,5.83,0,2.71-1.51,3.82-4.13,3a45.52,45.52,0,0,1-14.53-7.93C9.32,78.2,3.15,67.64,1.78,54.69,0,37.42,5.91,23.07,19.42,12.1A47.2,47.2,0,0,1,54.06,1.58a48,48,0,0,1,44,40.9,47.38,47.38,0,0,1-30.36,51c-.67.25-1.34.52-2,.75-2.4.8-4-.24-4-2.76s0-4.88,0-7.32Z"
                   />
                 </svg>
@@ -85,7 +84,6 @@
                   alt="Twitter logo"
                 >
                   <path
-                    class="cls-1"
                     d="M50.06,1.39a48.31,48.31,0,0,1,48.54,49C98.54,78.19,75.26,99.2,48.76,98.6a48.61,48.61,0,0,1,1.3-97.21ZM27.25,70.75a31.56,31.56,0,0,0,21.51,3.77C65.49,71.66,75,57.21,75.21,42.92a3.17,3.17,0,0,1,1.35-2.81,13.16,13.16,0,0,0,3.6-4c-1.85.35-3.37,1.28-5.43.92,1.76-1.6,3.46-2.95,4.11-5.32-1.79.65-3.36,1.27-5,1.8a2.33,2.33,0,0,1-2.48-.35c-3.82-3.17-8.07-3.88-12.53-1.56a10.58,10.58,0,0,0-6,11.11c.13,1.47-.48,1.59-1.6,1.46A32.35,32.35,0,0,1,30.49,33.69c-1.07-1.16-1.19-1.14-1.74.39a11.19,11.19,0,0,0,3,12.18c.33.3.93.45.81,1.19a6.41,6.41,0,0,1-3-.62c-1.31-.55-1.6-.07-1.38,1.12a11,11,0,0,0,6.76,8.46c.57.26,1.33.22,1.69.93a4.18,4.18,0,0,1-2.9.5c-1.37-.06-1.57.44-.92,1.54A11,11,0,0,0,41,65c.41.07,1-.09,1.09.5.06.41-.42.61-.72.83a22,22,0,0,1-5.78,2.91A35.88,35.88,0,0,1,27.25,70.75Z"
                   />
                 </svg>
@@ -105,7 +103,6 @@
                   alt="LinkedIn logo"
                 >
                   <path
-                    class="cls-1"
                     d="M50.32,1.4c24.95-.24,48.4,20.23,48.3,48.91A48.62,48.62,0,1,1,50.32,1.4ZM42.75,57h0c0,5.27,0,10.54,0,15.81,0,1.33.37,1.9,1.79,1.84,2.55-.09,5.11-.1,7.66,0,1.51.06,1.89-.53,1.87-1.94,0-5.66,0-11.32,0-17a14.33,14.33,0,0,1,.31-3.13,6.8,6.8,0,0,1,6.57-5.15c2.86,0,4.81,1.78,5.6,5a13.57,13.57,0,0,1,.3,3.3c0,5.66,0,11.32,0,17,0,1.41.32,2,1.85,1.94,2.6-.11,5.22-.09,7.82,0,1.36,0,1.85-.38,1.84-1.78-.07-6.49,0-13-.06-19.47a20.21,20.21,0,0,0-1.33-7c-3.44-9.24-16-9.93-20.82-4.21-.5.59-.92,1.86-1.69,1.53S54,42.15,54,41.3c.06-1.4-.52-1.85-1.87-1.82-2.5.07-5,.09-7.49,0-1.44,0-2,.42-1.94,1.9C42.8,46.6,42.75,51.81,42.75,57Zm-7.08.15c0-5.27,0-10.54,0-15.81,0-1.32-.37-1.93-1.8-1.89-2.6.08-5.21.06-7.82,0-1.2,0-1.68.42-1.67,1.65q0,16,0,32c0,1.27.52,1.61,1.7,1.59,2.55-.06,5.11-.11,7.66,0,1.62.08,2-.59,1.94-2C35.63,67.49,35.67,62.33,35.67,57.18ZM30.05,34.1c3.74,0,6.45-2.4,6.48-5.72a6.14,6.14,0,0,0-6.41-6.05c-3.82,0-6.39,2.46-6.38,6S26.28,34.11,30.05,34.1Z"
                   />
                 </svg>
@@ -131,7 +128,7 @@
                   />
                 </div>
                 <h2 class="screen-reader-only">About</h2>
-                <p class="blurb">
+                <p id="blurb">
                   Hello! I'm Stephanie, a hopeful Junior Software
                   Developer from Leeds.<br />
                   I've gone from History grad to coding bootcamp grad,
@@ -264,7 +261,7 @@
                     </ul>
                   </li>
                   <h4>Volunteer work</h4>
-                  <ul class="volunteer-work">
+                  <ul id="volunteer-work">
                     <li>
                       <b>Chaperone, Lighthouse Futures Trust</b>
                       <ul>
@@ -511,7 +508,6 @@
                       alt="GitHub logo"
                     >
                       <path
-                        class="cls-1"
                         d="M61.57,84.19c0-2.33,0-4.66,0-7a10.27,10.27,0,0,0-1.86-5.6c-1.12-1.63-1.11-1.58.94-1.92a38.9,38.9,0,0,0,6.63-1.55c7.79-2.74,11.8-8.42,12.92-16.4a25.76,25.76,0,0,0-.1-9.1,15.87,15.87,0,0,0-3.35-7.16A3,3,0,0,1,76,32.31c1-3.13.44-6.24-.39-9.33-.39-1.43-1.19-1.74-2.61-1.5a27.06,27.06,0,0,0-9.58,4.07,3.6,3.6,0,0,1-3,.53,45.36,45.36,0,0,0-20.76,0,4.25,4.25,0,0,1-3.59-.63,25.1,25.1,0,0,0-9.61-4,1.72,1.72,0,0,0-2.25,1.33,17.81,17.81,0,0,0-.41,9.84,2.25,2.25,0,0,1-.31,2.31c-4.19,4.79-4.61,10.51-3.93,16.45.6,5.24,2.46,9.9,6.65,13.35,3.63,3,8,4.25,12.52,5,.38.06.77.08,1.16.14,1,.16,1.37.53.53,1.45a8,8,0,0,0-1.92,4,2.36,2.36,0,0,1-1.91,2c-5.39,1.51-9.27.6-12.39-4-1.41-2.06-2.93-3.91-5.33-4.83A8.77,8.77,0,0,0,16.86,68c-.7-.09-1.58-.22-1.92.6s.51,1.27,1.08,1.63c2.89,1.76,4.51,4.49,5.86,7.46a10.77,10.77,0,0,0,9,6.46A19.22,19.22,0,0,0,36.51,84c1.28-.21,1.68.24,1.63,1.49-.07,1.94,0,3.89,0,5.83,0,2.71-1.51,3.82-4.13,3a45.52,45.52,0,0,1-14.53-7.93C9.32,78.2,3.15,67.64,1.78,54.69,0,37.42,5.91,23.07,19.42,12.1A47.2,47.2,0,0,1,54.06,1.58a48,48,0,0,1,44,40.9,47.38,47.38,0,0,1-30.36,51c-.67.25-1.34.52-2,.75-2.4.8-4-.24-4-2.76s0-4.88,0-7.32Z"
                       />
                     </svg>
@@ -531,7 +527,6 @@
                       alt="Twitter logo"
                     >
                       <path
-                        class="cls-1"
                         d="M50.06,1.39a48.31,48.31,0,0,1,48.54,49C98.54,78.19,75.26,99.2,48.76,98.6a48.61,48.61,0,0,1,1.3-97.21ZM27.25,70.75a31.56,31.56,0,0,0,21.51,3.77C65.49,71.66,75,57.21,75.21,42.92a3.17,3.17,0,0,1,1.35-2.81,13.16,13.16,0,0,0,3.6-4c-1.85.35-3.37,1.28-5.43.92,1.76-1.6,3.46-2.95,4.11-5.32-1.79.65-3.36,1.27-5,1.8a2.33,2.33,0,0,1-2.48-.35c-3.82-3.17-8.07-3.88-12.53-1.56a10.58,10.58,0,0,0-6,11.11c.13,1.47-.48,1.59-1.6,1.46A32.35,32.35,0,0,1,30.49,33.69c-1.07-1.16-1.19-1.14-1.74.39a11.19,11.19,0,0,0,3,12.18c.33.3.93.45.81,1.19a6.41,6.41,0,0,1-3-.62c-1.31-.55-1.6-.07-1.38,1.12a11,11,0,0,0,6.76,8.46c.57.26,1.33.22,1.69.93a4.18,4.18,0,0,1-2.9.5c-1.37-.06-1.57.44-.92,1.54A11,11,0,0,0,41,65c.41.07,1-.09,1.09.5.06.41-.42.61-.72.83a22,22,0,0,1-5.78,2.91A35.88,35.88,0,0,1,27.25,70.75Z"
                       />
                     </svg>
@@ -551,7 +546,6 @@
                       alt="LinkedIn logo"
                     >
                       <path
-                        class="cls-1"
                         d="M50.32,1.4c24.95-.24,48.4,20.23,48.3,48.91A48.62,48.62,0,1,1,50.32,1.4ZM42.75,57h0c0,5.27,0,10.54,0,15.81,0,1.33.37,1.9,1.79,1.84,2.55-.09,5.11-.1,7.66,0,1.51.06,1.89-.53,1.87-1.94,0-5.66,0-11.32,0-17a14.33,14.33,0,0,1,.31-3.13,6.8,6.8,0,0,1,6.57-5.15c2.86,0,4.81,1.78,5.6,5a13.57,13.57,0,0,1,.3,3.3c0,5.66,0,11.32,0,17,0,1.41.32,2,1.85,1.94,2.6-.11,5.22-.09,7.82,0,1.36,0,1.85-.38,1.84-1.78-.07-6.49,0-13-.06-19.47a20.21,20.21,0,0,0-1.33-7c-3.44-9.24-16-9.93-20.82-4.21-.5.59-.92,1.86-1.69,1.53S54,42.15,54,41.3c.06-1.4-.52-1.85-1.87-1.82-2.5.07-5,.09-7.49,0-1.44,0-2,.42-1.94,1.9C42.8,46.6,42.75,51.81,42.75,57Zm-7.08.15c0-5.27,0-10.54,0-15.81,0-1.32-.37-1.93-1.8-1.89-2.6.08-5.21.06-7.82,0-1.2,0-1.68.42-1.67,1.65q0,16,0,32c0,1.27.52,1.61,1.7,1.59,2.55-.06,5.11-.11,7.66,0,1.62.08,2-.59,1.94-2C35.63,67.49,35.67,62.33,35.67,57.18ZM30.05,34.1c3.74,0,6.45-2.4,6.48-5.72a6.14,6.14,0,0,0-6.41-6.05c-3.82,0-6.39,2.46-6.38,6S26.28,34.11,30.05,34.1Z"
                       />
                     </svg>
