Update my skills and experience to match CV, refactor stylesheet for simpler selectors on skills and exp

--- a/src/index.html
+++ b/src/index.html
@@ -165,23 +165,28 @@
                   aria-labeledby="tech-skills-heading"
                   class="accordion info"
                 >
+                  <li><b>Languages</b><br />JavaScript</li>
                   <li>
-                    <b>Languages</b><br />JavaScript, HTML/HTML5,
-                    CSS/CSS3
+                    <b>Front-end</b><br />
+                    React, React Native, Vue, Vuex, AWS Amplify, Expo,
+                    jQuery, HTML5, CSS3
                   </li>
                   <li>
-                    <b>Frameworks and libraries</b><br />
-                    React, React Native, Expo, jQuery, Node.js,
-                    Express, Jest
+                    <b>Back-end</b><br />
+                    DynamoDB, AWS Cognito, AWS Lambda, PostgreSQL,
+                    Node.js, Express
                   </li>
                   <li>
-                    <b>Database systems</b><br />
-                    PostgreSQL
+                    <b>Testing</b><br />
+                    Jest, TDD
+                  </li>
+                  <li>
+                    <b>Accessibility</b><br />
+                    ARIA, semantic markup
                   </li>
                   <li>
                     <b>Tools and processes</b><br />
-                    Git, TDD, semantic markup, accessibility, agile
-                    development
+                    Git, agile development, pair programming
                   </li>
                 </ul>
 
@@ -199,16 +204,16 @@
                   aria-labeledby="tech-skills-button"
                   class="accordion info"
                 >
-                  <li>
-                    Disability support in partial sightedness and
-                    Autism Spectrum Condition
-                  </li>
-                  <li>Mental health awareness and support</li>
-                  <li>Cultural awareness and sensitivity</li>
                   <li>Independent learning and research</li>
                   <li>Communication</li>
-                  <li>Critical thinking</li>
-                  <li>Self-motivation and positivity</li>
+                  <li>Critical and logical thinking</li>
+                  <li>Self-motivation</li>
+                  <li>Cultural awareness and sensitivity</li>
+                  <li>Adaptability and flexibility</li>
+                  <li>
+                    Disability and mental health support and awareness
+                    (partial sightedness, Autism Spectrum Condition)
+                  </li>
                 </ul>
 
                 <button
@@ -225,22 +230,37 @@
                   class="accordion info experience"
                 >
                   <li>
-                    <b>Full Stack Coding Bootcamp, Northcoders</b>
+                    <b
+                      >Northcoders: Full Stack Coding Bootcamp, March
+                      - June 2020</b
+                    >
                     <ul>
                       <li>
-                        3 month intensive JavaScript coding bootcamp
-                        delivered remotely due to lockdown
+                        3 month intensive full-stack JavaScript coding
+                        bootcamp, delivered remotely due to lockdown
                       </li>
-                      <li>Daily lectures and sprints</li>
-                      <li>Pair programming</li>
                       <li>
-                        Final group, student-led project, creating a
-                        mobile app, 'Budding', using agile development
+                        Daily lectures and sprints including pair
+                        programming and individual work, TDD and
+                        version control with Git
+                      </li>
+                      <li>
+                        Final group project, ‘Budding’ - in a group of
+                        four, created an end-to-end mobile app based
+                        on my idea to measure and track a plant’s
+                        growth by calculating a scale to convert
+                        screen pixels to a cm measurement, which is
+                        then used to calculate the plant's height.
+                        Utilised twice daily standups and kanban
+                        boards
                       </li>
                     </ul>
                   </li>
                   <li>
-                    <b>Executive, The Prince's Trust</b>
+                    <b
+                      >The Prince's Trust: Executive, February -
+                      August 2019</b
+                    >
                     <ul>
                       <li>
                         Building young people's skills and motivation,
@@ -260,27 +280,49 @@
                       </li>
                     </ul>
                   </li>
+
+                  <li>
+                    <b
+                      >Walt Disney World: Outdoor Food Vendor, June -
+                      August 2016</b
+                    >
+                    <ul>
+                      <li>
+                        Food preparation and handling in a fast-paced
+                        environment, maintenance of machines, stock
+                        replenishment, cash handling
+                      </li>
+                      <li>
+                        Adhering to an extremely high standard of
+                        customer service in every interaction so as to
+                        deliver a “magical” experience at every
+                        opportunity
+                      </li>
+                    </ul>
+                  </li>
                   <h4>Volunteer work</h4>
                   <ul id="volunteer-work">
                     <li>
-                      <b>Chaperone, Lighthouse Futures Trust</b>
+                      <b
+                        >Lighthouse Futures Trust: Volunteer Chaperone
+                        for Connections Club, November 2018 - June
+                        2019</b
+                      >
                       <ul>
                         <li>
-                          Chaperoned Connections Club events for young
-                          people with an autism spectrum condition to
-                          socialise with others
+                          Attending events (e.g. drinks, bowling) for
+                          young people with an Autism Spectrum
+                          Condition to socialise with others
                         </li>
                         <li>
-                          Attended events (e.g. drinks, bowling) to
-                          socialise and to ensure the event was
-                          running smoothly, everyone felt safe, and
-                          make sure everybody was included in
-                          activities and conversations
+                          Ensuring events run smoothly and everyone
+                          feels safe and included in activities and
+                          conversation
                         </li>
                       </ul>
                     </li>
                     <li>
-                      <b>Team Mate, Over The Wall</b>
+                      <b>Over the Wall: Team Mate, 2015 - 2018</b>
                       <ul>
                         <li>
                           24/7 care for children affected by serious
@@ -290,8 +332,7 @@
                         <li>
                           Participating in activities with children
                           designed to encourage them to recognise
-                          their potential, focusing heavily on
-                          specific positive labelling
+                          their potential
                         </li>
                         <li>
                           Dynamically assessing risk and safeguarding
@@ -300,8 +341,8 @@
                     </li>
                     <li>
                       <b
-                        >Secretary, Guide Dogs Society at Leeds
-                        University Union</b
+                        >Guide Dogs Society at Leeds University Union:
+                        Secretary, April 2015 - April 2016</b
                       >
                       <ul>
                         <li>
