Fix bug on show more and less buttons when multiple expanded, update metadata with site author and description

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
-    />
+    >
+    <meta name="author" content="Stephanie Thornley">
+    <meta name="description" content="Portfolio site for Stephanie Thornley, a junior software developer from Leeds, UK, outlining her skills and experience, and providing demos of projects and links to their source code.">
     <title>Stephanie Thornley's Portfolio</title>
     <link rel="stylesheet" href="./index.css" />
 
@@ -137,9 +139,8 @@
                   smaller details as well as the bigger picture, the
                   transition came naturally to me. I love the process
                   of coding (even debugging!), and I also enjoy
-                  learning about the history of tech and how
-                  advancements in technology are affected by social
-                  issues.
+                  learning about the history of tech and how its
+                  advancements are affected by society, and vice versa.
                 </p>
               </div>
             </section>
@@ -431,6 +432,7 @@
 
                   <div class="hidden-info">
                     <div id="budding-more-info">
+                      <div>
                       <p>
                         The user places markers on the photo at the
                         bottom of the pot, the top of the pot, and the
@@ -440,8 +442,8 @@
                         top of the pot in pixels, and create a
                         pixel-to-cm scale using the real-life pot
                         height.
-                        <br />
-                        <br />
+                      </p>
+                      <p>
                         It then uses this scale to calculate the
                         real-life height of the plant. Each time a
                         user measures their plant, it is saved as a
@@ -450,6 +452,7 @@
                         enabling the tracking of plant growth over
                         time.
                       </p>
+                      </div>
 
                       <img
                         src="./assets/project-demos/budding-muted.gif"
