Add Undercover Elf demo gif to Projects section

--- a/src/index.html
+++ b/src/index.html
@@ -391,10 +391,15 @@
                     <p>Users can securely create their own accounts using AWS Cognito, with the ability to change their password. When a user creates a new group, an invitation ID and link are generated. This ID can can be sent to friends and family to easily search for the group on their account, or click the link to join the group directly. When a group is created, the creator is registered as the admin, and can edit the group's name, budget, and gift
                     exchange date. Users have a wishlist for each group, where items can be added, edited, or deleted.  </p>
                       <img
-                        src=""
+                        src="./assets/project-demos/undercover-elf-demo.gif"
                         alt="gif showing a demonstration of the Undercover Elf app"
                         class="desktop-gif"
                       />
+                       <img
+                      src="./assets/project-demos/Northcoders-News.gif"
+                      alt="gif showing a demonstration of my Northcoders News site"
+                      class="desktop-gif"
+                    />
                     </div>
                     <div class="project-links">
                       <a href="#" target="_blank">Demo site</a>
